# FPGA_accelerated_CNN

./: .gitignore  Makefile  README.md  afi_access.sh  check_status.sh  create_afi.ppi  create_afi.sh  hw_run.ppi  hw_run.sh  hw_workflow.txt  hw_xclbin.ppi  hw_xclbin.sh  profile_summary.csv  sw_run.ppi  test_template.py  timeline_trace.csv  xclbin.run_summary  xrt.ini
FPGA_accelerated_CNN/src/: cnn.py  cnn_old.py  host.cpp
_x/: v++_compile_vdot.sw_emu_guidance.pb  v++_link_vdot.sw_emu_guidance.pb
configs/: design.cfg
docs/: acquiring.md  benchmarking.md  deliverables.md  hardware.md  intro.md  logistics.md  recommendations.md  software.md
func_tests/: .img2col_test.sh.swp  col2img_test  col2img_test.cpp  img2col_test  img2col_test.cpp  img2col_test.sh  matmul_sw_test  matmul_sw_test.cpp  test.sh  test_forward_sw.sh  weight2col_test.cpp
logs/: optraceViewer.html
logs/link/: vdot.sw_emu.xclbin.info
reports/link/: system_estimate_vdot.hw.xtxt  v++_link_vdot.hw_guidance.html  v++_link_vdot.sw_emu_guidance.html
reports/vdot.hw/: system_estimate_vdot.hw.xtxt  v++_compile_vdot.hw_guidance.html  vdot.hw.xclbin.link_summary  vdot.hw.xo.compile_summary  vdot.sw_emu.xo.compile_summary  vitis_analyzer.jou  vitis_analyzer_1985.backup.jou  vitis_analyzer_1987.backup.jou  xclbin.run_summary
reports/vdot.sw_emu/: profile_summary.csv  (+11 more)
src/: CMakeLists.txt  _host.cpp  _host.hpp  cnn.py  cnn_.py  emconfig.json  host  host.cpp  host.hpp  test.py  vdot.cpp
src/src_build/: host
temp_build/: 21_05_10-193439_afi_id.txt  21_05_12-130321_afi_id.txt  vdot.hw.awsxclbin
(+22 files in other folders)
